--- a/.github/workflows/update-ref.yml
+++ b/.github/workflows/update-ref.yml
@@ -19,17 +19,19 @@ jobs:
 
       - name: ♻️ 编译静态文件
         run: |
-          echo -e 'REF_URL=https://refs.xxx.net/\nREF_LABEL=网站首页' > .env
+          echo -e 'REF_URL=https://ref.ilil.tech/\nREF_LABEL=网站首页' > .env
           npm install
           npm run build
 
-      - name: 🚁 部署到服务器
-        uses: wlixcc/SFTP-Deploy-Action@v1.0
-        with:
-          username: 'root'   #ssh user name
-          port: '22' # 远程服务器ssh端口，默认22
-          server: 'ref.ilil.tech' # 远程服务器IP
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} # 认证服务器秘钥对的私钥
-          local_path: './dist/*'  # 对应我们项目打包后的静态文件路径
-          remote_path: '/var/www/html' # 服务器上的路径
-          delete_remote_files: true
+      - name: 🚁 部署到 GitHub Pages
+        env: 
+          # Github 仓库
+          GITHUB_REPO: github.com/jaywcjlove/reference.git
+        # 将编译后的博客文件推送到指定仓库
+        run: |
+          cd ./dist && git init && git add .
+          git config user.name "TechPang"
+          git config user.email "tech@ilil.tech"
+          git add .
+          git commit -m "GitHub Actions Auto Builder at $(date +'%Y-%m-%d %H:%M:%S')"
+          git push --force --quiet "https://${{ secrets.ACCESS_TOKEN }}@$GITHUB_REPO" master:master
