--- a/.github/workflows/update-ref.yml
+++ b/.github/workflows/update-ref.yml
@@ -1,7 +1,7 @@
-name: 每8个小时更新一次reference
+name: 每周更新一次 reference
 on:
   schedule:
-    - cron: '21 */8 * * *' # 定时任务
+    - cron: '0 0 * * 0' # 定时任务
   workflow_dispatch:       # 手动运行
 
 env: # 设置环境变量
